<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="poke.rogue.helper.presentation.dex.PokemonListViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_pokemon_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.dex.PokemonListActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_pokemon_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/poke_black"
            app:liftOnScrollColor="@color/poke_black">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_group"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/poke_black"
                android:elevation="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar_dex"
                    style="@style/CustomToolbarStyle"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:contentInsetStartWithNavigation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/pokemon_list_title_name">

                    <androidx.appcompat.widget.SearchView
                        style="@style/CustomSearchViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:imeOptions="actionSearch|flagNoExtractUi|flagNoFullscreen"
                        android:theme="@style/CustomSearchViewTheme"
                        app:onQueryTextChange="@{vm}"
                        app:queryHint="@string/dex_list_search_pokemon_hint" />

                </com.google.android.material.appbar.MaterialToolbar>

                <poke.rogue.helper.ui.component.PokeChip
                    android:id="@+id/chip_poke_fiter"
                    visible="@{! vm.isLoading()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    app:label="필터"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar_dex"
                    app:trailingIcon="@drawable/ic_filter" />

                <poke.rogue.helper.ui.component.PokeChip
                    android:id="@+id/chip_poke_sort"
                    visible="@{! vm.isLoading()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    app:label="정렬"
                    app:layout_constraintEnd_toStartOf="@id/chip_poke_fiter"
                    app:layout_constraintTop_toBottomOf="@id/toolbar_dex"
                    app:trailingIcon="@drawable/ic_sort" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pokemon_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_pokemon_list_pokemon"
            tools:spanCount="3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dex_loading"
            visible="@{vm.isLoading()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/img_tmp_loading"
                app:layout_constraintBottom_toTopOf="@id/tv_loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_loading"
                style="@style/TextAppearance.Poke.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_list_loading_guide"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dex_empty"
            visible="@{vm.isEmpty()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_ditto_silhouette"
                app:layout_constraintBottom_toTopOf="@id/tv_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_empty"
                style="@style/TextAppearance.Poke.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_list_empty_guide"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
